--- a/my-app/package.json
+++ b/my-app/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.20",
+    "eslint-plugin-react-hooks": "^5.1.0-rc-9d2da591-20240808",
     "fontawesome": "^5.6.3",
     "postcss": "^8.4.40",
     "react": "^18.3.1",
