--- a/server/vercel.json
+++ b/server/vercel.json
@@ -4,8 +4,6 @@
     { "src": "./index.js", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/", "dest": "./index.js" },
-    { "src": "/emoji/api", "dest": "./api/emoji.js" }
+    { "src": "/(.*)", "dest": "./index.js" }
   ]
 }
-
